assets/css/main.css
@charset "UTF-8";

*, *::after, *::before {
    box-sizing: inherit;
}

html {
    box-sizing: border-box;
}

body {
    color: #333;
    font-family: "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
    font-size: 1em;
    line-height: 1.5;
    overflow-x: hidden;
}

@font-face {
    font-family: "Great Vibes";
    src: url("../fonts/GreatVibes-Regular.otf") format("opentype"); }
@font-face {
    font-family: "Open Sans Condensed";
    src: url("../fonts/OpenSans-CondLight.ttf") format("truetype"); }

.banner {
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    width: 100%;
    height: 100vh;
    position: relative;
    overflow: hidden !important;
    /*background-image: url("../images/banner.png") !important;*/
    background-size: cover !important;
    background-position: center center !important;
}
.banner-video {
    z-index: -1;
    height: auto;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}
.banner-inner {
    z-index: 1;
    color: #fff;
}
.banner-inner h1 {
    font-family: "Great Vibes";
    font-size: 6em;
    margin-bottom: 0;
}
.banner-inner p {
    font-size: 1.5em;
}
.banner-inner button {
    margin-top: 0.5em;
    font-size: 1.5em;
}

.side-image {
    background: #fff;
    text-align: justify;
}
@media screen and (min-width: 900px) {
    .side-image {
        display: table;
        width: 100%;
        table-layout: fixed;
    }
}
.side-image .images-wrapper {
    background: url("../images/beer.png");
    background-color: #fff;
    background-size: contain;
    background-repeat: no-repeat;
    border-bottom: 0;
    display: block;
    height: 30em;
    padding: 3em;
}
@media screen and (min-width: 900px) {
    .side-image .images-wrapper {
        display: table-cell;
        width: 33.33333%;
        background-position: bottom;
        background-size: contain;
        background-repeat: no-repeat;
        border-right: 0;
    }
}
.side-image .side-image-content {
    display: table-cell;
    width: 100%;
    padding: 4em 1em;
}
@media screen and (min-width: 900px) {
    .side-image .side-image-content {
        display: table-cell;
        width: 66.66667%;
        padding: 8em 4em;
    }
}
.side-image .side-image-content h2 {
    margin-bottom: 0.9em;
    font-size: 2em;
    text-transform: capitalize;
}
.side-image .side-image-content p {
    color: #333;
    line-height: 1.5;
}

.footer {
    position: relative;
    background: #333;
    padding: 1em;
    width: 100%;
    display: inline-block;
    text-align: center;
}
.footer ul li {
    list-style: none;
    padding-right: 1em;
    display: inline;
    text-align: left;
    margin-right: 0.5em;
}
.footer ul li a {
    color: rgba(255, 255, 255, 0.4);
    text-decoration: none;
    font-size: 2em;
}
.footer ul li a:focus,
.footer ul li a:hover,
.footer .dashboard-link a:focus,
.footer .dashboard-link button:hover {
    color: #fff;
}
.footer .dashboard-link button {
    color: rgba(255, 255, 255, 0.4);
    text-decoration: none;
}
.footer li.dashboard-link {
    position: absolute;
    right: 20px;
    padding-top: 12px;
}

.content {
    max-width: 80%;
    margin-left: auto;
    margin-right: auto;
    padding: 5em 0;
    text-align: center;
}
.content::after {
    clear: both;
    content: "";
    display: table;
}
.content > h1 {
    color: #111;
    font-family: "Open Sans Condensed", sans-serif;
    font-size: 3em;
    margin: 0 0 0;
    padding: 20px 30px;
    text-transform: uppercase;
    border-top: 1px solid #111;
    border-bottom: 1px solid #111;
    display: inline-block;
}

.no-beer-message {
    margin-top: 50px;
}

